# FR5

./: .gitignore  README.md  fastdds.xml
.claude/: CLAUDE.local.md  CLAUDE.md  memory.md  settings.json  settings.local.json
.claude/agents/: fixer.md  researcher.md  reviewer.md
.claude/rules/: design.md  tech-defaults.md  workflow.md
.claude/skills/: add-sdk-function.md  build-workspace.md  debug-connection.md  send-cartesian-cmd.md  switch-sim-real.md
fairino-cpp-sdk-main/: README.md
fairino5_v6_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
fairino5_v6_moveit2_config/config/: fairino5_v6_robot.ros2_control.xacro  fairino5_v6_robot.srdf  fairino5_v6_robot.urdf.xacro  hand.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  move_group.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
fairino5_v6_moveit2_config/launch/: move_cartesian.py  test_rviz.py
fairino_description/: CMakeLists.txt
fairino_description/launch/: visualize_urdf.launch.py
fairino_description/meshes/camera_mount/: connector_link.STL  mount_base_link.STL
fairino_description/urdf/: camera_mount.urdf.xacro  fairino5_v6.urdf  fairino5_v6_arm.urdf.xacro  fairino5_v6_gripper.urdf.xacro  fairino5_v6_with_camera.urdf.xacro  gemini335L_336L.urdf.xacro  gemini335L_336L_camera.urdf.xacro
fairino_hardware/include/fairino_hardware/: data_type_def.h  fairino_hardware_interface.hpp
fairino_hardware/libfairino/lib/: libfairino.so.2
fairino_hardware/src/: command_server.cpp  fairino_hardware_interface.cpp
fairino_msgs/srv/: RemoteCmdInterface.srv  RemoteScriptContent.srv
fr5_arm_hand_config/: .setup_assistant  CMakeLists.txt  package.xml
fr5_arm_hand_config/config/: fairino5_v6_robot.ros2_control.xacro  fairino5_v6_robot.srdf  fairino5_v6_robot.urdf.xacro  hand.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  orbbec_low_cpu.yaml  ros2_controllers.yaml  sensors_kinect_pointcloud.yaml
fr5_arm_hand_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fr5_motion_cpp/: CMakeLists.txt  package.xml
fr5_motion_cpp/launch/: run_movegroup.launch.py
fr5_motion_cpp/src/: fr5_movegroup_node.cpp
moveit_calibration/: calib1.launch.py  jointstates.yaml  samples1.yaml
moveit_calibration/.github/workflows/: ci.yaml
moveit_calibration/moveit_calibration_gui/: CMakeLists.txt
mtc_test/: CMakeLists.txt  package.xml
mtc_test/config/: fr5_config.yaml  mtc.rviz  mtc2.rviz
mtc_test/include/mtc_test/: mtc_node.hpp
mtc_test/launch/: demo.launch.py  run.launch.py  sim.launch.py
mtc_test/src/: mtc_node.cpp  pick_place_controller.cpp
(+14 files in other folders)
